--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@react-google-maps/api": "^2.20.8",
     "firebase": "^12.8.0",
+    "i18next": "^25.8.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
